--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
+
 //Mixins
 @mixin transitionEffect($par){
   transition: $par all;
@@ -12,8 +14,84 @@
 }
 
 //color
-$bg-color-1 :#3b3b98;
+$bg-color-1 :#7bdaf3;
 $bg-color-2: #fff;
-$bg-color-3: #23235b;
-$bg-color-4: rgba(255, 255, 255, 0.2);
-$bg-color-5: rgba(0, 0, 0, 0.4);
+$bg-color-3: #9ec862;
+$bg-color-4: rgba(0, 0, 0, 0.1);
+
+
+
+
+
+* {
+  box-sizing: border-box;
+  outline: none;
+}
+
+body {
+  background-color: $bg-color-1;
+  font-family: 'Poppins', sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding-top: 3rem;
+}
+
+.add {
+  position: fixed;
+  top: 1rem;
+  right: 1rem;
+  background-color: $bg-color-3;
+  color: $bg-color-2;
+  border: none;
+  border-radius: 3px;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+
+.add:active {
+  transform: scale(0.98);
+}
+
+.note {
+  background-color: $bg-color-2;
+  box-shadow: 0 0 10px 4px $bg-color-4;
+  margin: 30px 20px;
+  height: 400px;
+  width: 400px;
+  overflow-y: scroll;
+}
+
+.note .tools {
+  background-color: $bg-color-3;
+  display: flex;
+  justify-content: flex-end;
+  padding: 0.5rem;
+}
+
+.note .tools button {
+  background-color: transparent;
+  border: none;
+  color: $bg-color-2;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-left: 0.5rem;
+}
+
+.note textarea {
+  outline: none;
+  font-family: inherit;
+  font-size: 1.2rem;
+  border: none;
+  height: 400px;
+  width: 100%;
+  padding: 20px;
+}
+
+.main {
+  padding: 20px;
+}
+
+.hidden {
+  display: none;
+}
